fix(dropdown): fixed table setting background color in dark mode.

--- a/app/assets/css/vendor-override.css
+++ b/app/assets/css/vendor-override.css
@@ -191,6 +191,8 @@ code {
 .dropdown-menu {
   background: var(--bg-dropdown-menu-color);
   border-radius: 8px;
+  @apply th-dark:bg-gray-warm-8;
+  @apply th-highcontrast:bg-gray-warm-8;
 }
 
 .dropdown-menu > li > a {
