--- a/app/portainer/components/datatables/datatable.css
+++ b/app/portainer/components/datatables/datatable.css
@@ -338,6 +338,8 @@
   color: var(--text-dropdown-menu-color);
   padding: 15px;
   background-color: var(--bg-dropdown-menu-color) !important;
+  @apply th-dark:!bg-gray-warm-8;
+  @apply th-highcontrast:!bg-gray-warm-8;
 }
 
 [data-reach-menu-list],
